fixed spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -50,7 +50,7 @@
 
 @media screen and (max-width: 769px) {
   .about {
-    width: 450px;
+    width: 400px;
   }
 
   .image {
